# lvgl-ui-generator

./: README.md  skill.md
preview/: .gitignore  CMakeLists.txt  main.c  setup.ps1  setup.sh
references/: animation-guide.md  chart-guide.md  coding-conventions.md  common-errors.md  component-reuse.md  design-showcase.md  design-tokens.md  flex-grid-guide.md  font-pipeline.md  frontend-design-integration.md  icon-display-guide.md  interaction-patterns.md  lvgl-v9-api-cheatsheet.md  multi-dpi-guide.md  preview-workflow.md  round-display-guide.md  scenario-quickstarts.md  screen-navigation.md  scrollbar-guide.md  theme-system.md  visual-effects-catalog.md  web-preview-workflow.md
references/examples/motor-control/: README.md  app_fonts.h  chars.txt  motor_control.c  motor_control.h  page_dc.c  page_dc.h  page_overview.c  page_overview.h  page_stepper.c  page_stepper.h
references/examples/smart-home/: device_page.c  home_page.c  scene_page.c  smart_home.c  smart_home.h  smart_home_fonts.h
